добавлена группировка заказов